# oink-judge

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  config.json  oink-judge.cpp  run_oink_judge.sh  run_web.py  stop_oink_judge.sh
modules/auth_service/: CMakeLists.txt
modules/auth_service/include/oink_judge/auth_service/: auth_manager.h  handle_request.h  protocol_with_fastapi.h  session.h  table_sessions.h  table_users.h
modules/auth_service/src/: auth_manager.cpp  handle_request.cpp  protocol_with_fastapi.cpp  server_starter.cpp  session.cpp  table_sessions.cpp  table_users.cpp
modules/auth_service/type_registration/: type_registration.cpp
modules/config/: CMakeLists.txt  issues.md  tests_to_add.md
modules/config/include/oink_judge/config/: common_utils.h  common_utils.inl  config.h  logger_config_utils.h  logger_utils.h  problem_config_utils.h  server_config_utils.h
modules/config/python_binding/: CMakeLists.txt  binding.cpp
modules/config/src/: common_utils.cpp  config.cpp  logger_config_utils.cpp  logger_utils.cpp  problem_config_utils.cpp  server_config_utils.cpp
modules/config/tests/: CMakeLists.txt  test_config.cpp  test_logger_config.cpp  test_problem_config.cpp  test_server_config.cpp
modules/config/tests/resources/test_config/: bad_malformed.json  bad_missing_credentials.json  bad_missing_db.json  good_config.json
modules/config/tests/resources/test_logger_config/: good_config.json  no_logger.json
modules/config/tests/resources/test_problem_config/: bad_no_problems.json  good_config.json
modules/config/tests/resources/test_server_config/: bad_missing_my_port.json
modules/content_service/: CMakeLists.txt
modules/content_service/include/oink_judge/content_service/: config_utils.h  content_client_protocol.h  content_manifest.h  manifest_storage.h
modules/content_service/python_binding/: CMakeLists.txt  binding.cpp
modules/content_service/src/: config_utils.cpp  content_client_protocol.cpp  content_config_utils.cpp  content_manifest.cpp  content_server_protocol.cpp  content_storage.cpp  manifest_storage.cpp
modules/content_service/src/client/: content_client_protocol.cpp  content_storage.cpp
modules/content_service/src/problem_package_converter/: main.cpp  polygon_converter.cpp
modules/content_service/src/server/: content_server_protocol.cpp
modules/content_service/type_registration/: client_type_registration.cpp  server_type_registration.cpp
modules/database/: CMakeLists.txt
modules/database/include/oink_judge/database/: config_utils.h  database.h  database.inl  table_submissions.h
modules/database/src/: config_utils.cpp  database.cpp  table_submissions.cpp
modules/dispatcher/: CMakeLists.txt
modules/dispatcher/include/oink_judge/dispatcher/: invoker.h  problem_submission_manager.hpp  protocol_with_fastapi.h  protocol_with_invoker.h  send_submission_to_invoker.h  testing_queue.h
modules/dispatcher/src/: invoker.cpp  protocol_with_fastapi.cpp  protocol_with_invoker.cpp  send_submission_to_invoker.cpp  server_starter.cpp  testing_queue.cpp
modules/dispatcher/type_registration/: type_registration.cpp
modules/factory/: CMakeLists.txt
modules/factory/include/oink_judge/factory/: parameterized_type_factory.hpp  parameterized_type_factory.inl  type_factory.hpp
modules/logger/: CMakeLists.txt  issues.md  tests_to_add.md
modules/logger/examples/: show_colors.cpp  simple_log.cpp
modules/logger/include/oink_judge/logger/: logger.h  logger.inl  python_logger.h
modules/logger/python_binding/: CMakeLists.txt  binding.cpp
modules/logger/src/: logger.cpp  python_logger.cpp
modules/logger/tests/: CMakeLists.txt  test_logger.cpp  test_python_logger.py
modules/plugin_manager/: CMakeLists.txt
modules/plugin_manager/include/oink_judge/plugin_manager/: config_utils.h  plugin_manager.h
modules/plugin_manager/src/: config_utils.cpp  plugin_manager.cpp
modules/shared/python_binding/: CMakeLists.txt
modules/shared/python_binding/awaitable_support/: CMakeLists.txt  issues.md  tests_to_add.md
modules/shared/python_binding/awaitable_support/python_binding/: CMakeLists.txt  binding.cpp
modules/shared/python_binding/awaitable_support/src/: awaitable_bridge.cpp
modules/shared/utils/: CMakeLists.txt
modules/shared/utils/src/: filesystem.cpp
modules/socket/: CMakeLists.txt  issues.md
modules/socket/python_binding/: CMakeLists.txt  binding.cpp
modules/socket/src/: async_server.cpp  boost_io_context.cpp  boost_ssl_context.cpp  byte_order.cpp  client_config_utils.cpp  connection_protocol.cpp  connection_storage.cpp  server_config_utils.cpp  simple_connection_handler.cpp
modules/socket/src/protocols/: auth_required_protocol.cpp  authorizing_protocol.cpp  pinging_protocol.cpp  ponging_protocol.cpp  protocol_base.cpp  protocol_decorator.cpp  protocol_with_requests.cpp
modules/socket/src/sessions/: session_base.cpp  ssl_session.cpp
modules/socket/tests/: test_server_config.cpp
modules/socket/tests/test_server_config/: bad_missing_connection_handler.json  good_config.json  good_credentials.json
modules/socket/type_registration/: type_registration.cpp
modules/test_node/: CMakeLists.txt
modules/test_node/include/: test_node_config_utils.h
modules/test_node/src/: config_utils.cpp  invoker_protocol.cpp  problem_table.cpp  problem_tables_storage.cpp  test_node_config_utils.cpp  test_node_starter.cpp  test_storage.cpp  verdict_utils.cpp
modules/test_node/src/problem_builders/: default_problem_builder.cpp  enable_get_test_by_name_impl.cpp
modules/test_node/src/tests/: compilation_test.cpp  single_test.cpp  sync_result_test.cpp  testset.cpp
modules/test_node/src/verdict_aggregators/: aggregate_current.cpp  aggregate_max.cpp
modules/test_node/src/verdict_builders/: verdict_builder_min.cpp  verdict_builder_sum.cpp
modules/test_node/src/verdicts/: default_verdict.cpp  verdict_base.cpp
modules/test_node/type_registration/: type_registration.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/oink_judge/utils/: async.h  (+2 more)
modules/utils/src/: async.cpp  crypto.cpp  filesystem.cpp
(+403 files in other folders)
