cmake_minimum_required(VERSION 3.28)
project(oink-judge)
include(CTest)
enable_testing()

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(modules/logger)
add_subdirectory(modules/config)
add_subdirectory(modules/factory)
add_subdirectory(modules/utils)
add_subdirectory(modules/database)
add_subdirectory(modules/socket)
add_subdirectory(modules/content_service)
add_subdirectory(modules/dispatcher)
add_subdirectory(modules/auth_service)
add_subdirectory(modules/test_node)
